# re3

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  conanfile.py  premake-vs2015.cmd  premake5.lua  premake5vs17.cmd  printHash.sh
src/: BulletTrace.h  BulletTraces.cpp  BulletTraces.h  CMakeLists.txt  Camera.cpp  Camera.h  CdStream.cpp  CdStream.h  Clock.cpp  Clock.h  Collision.cpp  Collision.h  ControllerConfig.cpp  ControllerConfig.h  CullZones.cpp  CullZones.h  CutsceneMgr.cpp  CutsceneMgr.h  DamageManager.cpp  DamageManager.h  Directory.cpp  Directory.h  Door.h  EmergencyPed.cpp  FileLoader.cpp  FileLoader.h  FileMgr.cpp  FileMgr.h  Fire.h  Frontend.cpp  Frontend.h  Game.cpp  Game.h  Garages.cpp  Garages.h  General.h  Glass.cpp  Glass.h  MenuManager.cpp  MenuManager.h  (+73 more)
src/animation/: AnimBlendAssocGroup.cpp  AnimBlendAssocGroup.h  AnimBlendAssociation.cpp  AnimBlendAssociation.h  AnimBlendClumpData.cpp  AnimBlendClumpData.h  AnimBlendHierarchy.cpp  AnimBlendHierarchy.h  AnimBlendList.h  AnimBlendNode.cpp  AnimBlendNode.h  AnimBlendSequence.cpp  AnimBlendSequence.h  AnimManager.cpp  AnimManager.h  AnimationId.h  Bones.cpp  Bones.h  CutsceneMgr.cpp  CutsceneMgr.h  CutsceneMgr_overlay.cpp  FrameUpdate.cpp  RpAnimBlend.cpp  RpAnimBlend.h
src/audio/: AudioCollision.cpp  AudioCollision.h  AudioLogic.cpp  AudioManager.cpp  AudioManager.h  AudioManager.h.autosave  AudioSamples.h  AudioScriptObject.cpp  AudioScriptObject.h  DMAudio.cpp  DMAudio.h  MusicManager.cpp  MusicManager.h  PolRadio.cpp  PolRadio.h  PoliceRadio.cpp  PoliceRadio.h  SampleManager.cpp  SampleManager.h  audio_enums.h  sampman.cpp  sampman.h  sampman_miles.cpp  sampman_null.cpp  sampman_oal.cpp  soundlist.h
src/buildings/: Building.cpp  Building.h  Treadable.cpp  Treadable.h
src/collision/: ColBox.h  ColLine.h  ColModel.cpp  ColModel.h  ColPoint.h  ColSphere.cpp  ColSphere.h  ColStore.cpp  ColStore.h  ColTriangle.cpp  ColTriangle.h  Collision.cpp  Collision.h  TempColModels.cpp  TempColModels.h
src/control/: AccidentManager.cpp  AccidentManager.h  AutoPilot.cpp  AutoPilot.h  Bridge.cpp  Bridge.h  CarAI.cpp  CarAI.h  CarCtrl.cpp  CarCtrl.h  CarGen.cpp  CarGen.h  Cranes.cpp  Cranes.h  Curves.cpp  Darkel.cpp  Darkel.h  GameLogic.cpp  GameLogic.h  Gangs.cpp  Gangs.h  Garages.cpp  Garages.h  HandlingDataMgr.cpp  HandlingDataMgr.h  HandlingMgr.cpp  HandlingMgr.h  ObjectData.cpp  ObjectData.h  OnscreenTimer.cpp  OnscreenTimer.h  PathFind.cpp  PathFind.h  PedPlacement.cpp  PedStats.cpp  PedStats.h  PedType.cpp  PedType.h  PhoneInfo.cpp  PhoneInfo.h  (+39 more)
src/core/: Accident.cpp  Accident.h  AnimViewer.cpp  Cam.cpp  Camera.cpp  Camera.h  CdStream.cpp  CdStream.h  CdStreamPosix.cpp  Clock.cpp  Clock.h  ColStore.cpp  ColStore.h  Collision.cpp  Collision.h  ControllerConfig.cpp  ControllerConfig.h  Crime.h  CrimeType.h  CutsceneMgr.cpp  CutsceneMgr.h  Debug.cpp  Debug.h  Directory.cpp  EventList.cpp  EventList.h  Explosion.cpp  Explosion.h  FileLoader.cpp  FileLoader.h  FileMgr.cpp  FileMgr.h  Fire.cpp  Fire.h  FrontEndControls.cpp  FrontEndControls.h  Frontend.cpp  Frontend.h  FrontendTriggers.h  Frontend_PS2.cpp  (+81 more)
src/entities/: Automobile.cpp  Automobile.h  Boat.cpp  Boat.h  Building.cpp  Building.h  CivilianPed.cpp  CivilianPed.h  CopPed.h  CutsceneHead.cpp  CutsceneHead.h  CutsceneObject.cpp  CutsceneObject.h  Dummy.cpp  Dummy.h  DummyObject.cpp  DummyObject.h  EmergencyPed.h  Entity.cpp  Entity.h  Heli.cpp  Heli.h  Object.cpp  Object.h  Ped.cpp  Ped.h  PedIK.cpp  PedIK.h  Physical.cpp  Physical.h  Plane.h  PlayerInfo.cpp  PlayerInfo.h  PlayerPed.cpp  PlayerPed.h  Solid.h  Train.cpp  Train.h  Treadable.cpp  Treadable.h  (+2 more)
src/extras/: GitSHA1.cpp  custompipes.cpp  custompipes.h  custompipes_d3d9.cpp  custompipes_gl.cpp  debugmenu.cpp  debugmenu.h  frontendoption.cpp  frontendoption.h  ini_parser.hpp  postfx.cpp  postfx.h  screendroplets.cpp
src/fakerw/: fake.cpp  rphanim.h  rpskin.h  rpworld.h  rtquat.h  rwcore.h  rwplcore.h
src/leeds/: CustomSoundTrack.cpp  CustomSoundTrack.h  smallHeap.cpp  smallHeap.h
src/math/: Matrix.cpp  Matrix.h  Quaternion.h  Rect.h  Vector.cpp  Vector.h  Vector2D.h  VuVector.h  math.cpp  maths.h
src/modelinfo/: BaseModelInfo.cpp  BaseModelInfo.h  ClumpModelInfo.cpp  ClumpModelInfo.h  MloModelInfo.cpp  MloModelInfo.h  ModelIndices.cpp  ModelIndices.h  ModelInfo.cpp  ModelInfo.h  PedModelInfo.cpp  PedModelInfo.h  SimpleModelInfo.cpp  SimpleModelInfo.h  TimeModelInfo.cpp  TimeModelInfo.h  VehicleModelInfo.cpp  VehicleModelInfo.h  WeaponModelInfo.cpp  WeaponModelInfo.h  XtraCompsModelInfo.cpp  XtraCompsModelInfo.h
src/objects/: CutsceneHead.cpp  CutsceneHead.h  CutsceneObject.cpp  CutsceneObject.h  DummyObject.cpp  DummyObject.h  Object.cpp  Object.h  ObjectData.cpp  ParticleObject.cpp  ParticleObject.h  Projectile.cpp  Projectile.h  Stinger.cpp  Stinger.h
src/peds/: CivilianPed.cpp  CivilianPed.h  CopPed.cpp  CopPed.h  DummyPed.h  EmergencyPed.cpp  EmergencyPed.h  Gangs.cpp  Gangs.h  Ped.cpp  Ped.h  PedAI.cpp  PedAttactor.cpp  PedAttractor.cpp  PedAttractor.h  PedChat.cpp  PedDebug.cpp  PedFight.cpp  PedIK.cpp  PedIK.h  PedPlacement.cpp  PedPlacement.h  PedRoutes.cpp  PedRoutes.h  PedStats.cpp  PedStats.h  PedType.cpp  PedType.h  PlayerPed.cpp  PlayerPed.cpp.autosave  PlayerPed.h  Population.cpp  Population.h
src/render/: 2dEffect.h  Antennas.cpp  Clouds.cpp  Clouds.h  Console.cpp  Console.h  Coronas.cpp  Coronas.h  Credits.cpp  Credits.h  CutsceneShadow.cpp  CutsceneShadow.h  Draw.cpp  Draw.h  Fluff.cpp  Fluff.h  Font.cpp  Font.h  Glass.cpp  Glass.h  Hud.cpp  Hud.h  Instance.cpp  Instance.h  Lights.cpp  Lights.h  Lines.cpp  MBlur.cpp  MBlur.h  MoneyMessages.cpp  MoneyMessages.h  Occlusion.cpp  Occlusion.h  Particle.cpp  Particle.h  ParticleMgr.cpp  ParticleMgr.h  ParticleType.h  PlayerSkin.cpp  PointLights.cpp  (+39 more)
src/renderer/: 2dEffect.h  Clouds.h  Console.cpp  Console.h  Coronas.cpp  Coronas.h  Credits.cpp  Draw.cpp  Fluff.cpp  Fluff.h  Font.cpp  Font.h  Glass.cpp  Glass.h  Hud.cpp  Hud.h  MBlur.cpp  MBlur.h  Particle.h  (+28 more)
(+609 files in other folders)
